5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1808_2581.log
== TEST (2019-06-10 21:21:56) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] > 0):
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:22:08) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] > 0):
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:23:24) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] > 0):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:24:10) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] > 0):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:25:46) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] > 0):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:27:15) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1 and T_EA_SA_EC_Sc[i] >= 0 ):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:28:50) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1 and T_EA_SA_EC_Sc[i] >= 0 ):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:30:08) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0 ):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:33:38) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0 and size(T_EA_SA_EC_Sc) > 1):
	entrada_A = 0
	saida_A = 0
	entrada_C = 0
	saida_C = 0
	for i in range(size(T_EA_SA_EC_Sc)):
		entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
		saida_A = saida_A + T_EA_SA_EC_Sc[2]
		entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
		saida_C = saida_C + T_EA_SA_EC_Sc[4]
		T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
	i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:35:30) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(T_EA_SA_EC_Sc[i] >= 0):
		entrada_A = 0
		saida_A = 0
		entrada_C = 0
		saida_C = 0
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:39:10) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(T_EA_SA_EC_Sc[i] >= 0):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:22:17) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	if(T_EA_SA_EC_Sc[i] >= 0):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:25:04) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) > 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:25:45) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) > 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:28:46) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) > 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:58:59) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) > 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
			
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:01:54) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) >= 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
			
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:04:17) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(T_EA_SA_EC_Sc != -1):
	if(size(T_EA_SA_EC_Sc) >= 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
			
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:05:47) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[i] >= 0):
	if(size(T_EA_SA_EC_Sc) > 1):
		for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:11:01) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))
		i = i + 1	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
File "XXXX", line 17
    i = i + 1	
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:11:16) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:12:55) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
			print(entrada_A)
			print(saida_A)
			print(entrada_C)
			print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:13:53) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
			print(entrada_A)
			print(saida_A)
			print(entrada_C)
			print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:14:25) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(size(T_EA_SA_EC_Sc) > 1):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	print(entrada_A)
	print(saida_A)
	print(entrada_C)
	print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:17:36) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0

i = 0
while(T_EA_SA_EC_Sc[0] >= 0):
	for i in range(size(T_EA_SA_EC_Sc)):
			entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
			saida_A = saida_A + T_EA_SA_EC_Sc[2]
			entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
			saida_C = saida_C + T_EA_SA_EC_Sc[4]
			T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	print(entrada_A)
	print(saida_A)
	print(entrada_C)
	print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:19:19) 
-- CODE:
from numpy import*
T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(T_EA_SA_EC_Sc[0] >= 0):
	entrada_A = entrada_A + T_EA_SA_EC_Sc[1]
	saida_A = saida_A + T_EA_SA_EC_Sc[2]
	entrada_C = entrada_C + T_EA_SA_EC_Sc[3]
	saida_C = saida_C + T_EA_SA_EC_Sc[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
	print(entrada_A)
	print(saida_A)
	print(entrada_C)
	print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:25:03) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
	print(entrada_A)
	print(saida_A)
	print(entrada_C)
	print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:26:53) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
	print(entrada_A)
	print(saida_A)
	print(entrada_C)
	print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:28:01) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 and size(vetor) > 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:28:55) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 or size(vetor) > 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:29:28) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 or size(vetor) > 1):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:29:59) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 and size(vetor) > 1):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:30:32) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	T_EA_SA_EC_Sc = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:31:27) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:32:06) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 and size(vetor) > 1):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:32:15) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = 0
saida_A = 0
entrada_C = 0
saida_C = 0


while(vetor[0] >= 0 and size(vetor) > 1):
	entrada_A = entrada_A + vetor[1]
	saida_A = saida_A + vetor[2]
	entrada_C = entrada_C + vetor[3]
	saida_C = saida_C + vetor[4]
	vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:37:58) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = vetor[1]
saida_A = vetor[2]
entrada_C = vetor[3]
saida_C = vetor[4]


while(vetor_1 >= 0):
	vetor_1 = eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:"))
	vetor_1 = array(vator_1)
	entrada_A = entrada_A + vetor_1[1]
	saida_A = saida_A + vetor_1[2]
	entrada_C = entrada_C + vetor_1[3]
	saida_C = saida_C + vetor_1[4]	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:38:51) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = vetor[1]
saida_A = vetor[2]
entrada_C = vetor[3]
saida_C = vetor[4]

x = 0
while(x >= 0):
	vetor_1 = eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:"))
	x = vetor_1
	vetor_1 = array(vator_1)
	entrada_A = entrada_A + vetor_1[1]
	saida_A = saida_A + vetor_1[2]
	entrada_C = entrada_C + vetor_1[3]
	saida_C = saida_C + vetor_1[4]	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 20:39:39) 
-- CODE:
from numpy import*
vetor = array(eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:")))

entrada_A = vetor[1]
saida_A = vetor[2]
entrada_C = vetor[3]
saida_C = vetor[4]

x = 0
while(x >= 0):
	vetor_1 = eval(input("tempo, entrandoADM, saindoADM, entrandoCHAO, saindoCHAO:"))
	x = vetor_1
	vetor_1 = array(vetor_1)
	entrada_A = entrada_A + vetor_1[1]
	saida_A = saida_A + vetor_1[2]
	entrada_C = entrada_C + vetor_1[3]
	saida_C = saida_C + vetor_1[4]	
	
print(entrada_A)
print(saida_A)
print(entrada_C)
print(saida_C)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
